--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -1,6 +1,9 @@
 @import './base.css';
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
 
-body { margin: 0; padding: 0;  }
+body { margin: 0; padding: 0; margin: auto; max-width: 1140px; }
 #app{height: 450px; width: 800px;}
 
         
